@@ -1,5 +1,5 @@
-This is Python version 2.6.5 rc 2
-=================================
+This is Python version 2.6.5
+============================
 
 Copyright (c) 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010
 Python Software Foundation.
