@@ -4,6 +4,12 @@ Python News
 
 (editors: check NEWS.help for information about editing NEWS using ReST.)
 
+What's New in Python 2.6.5?
+===========================
+
+*Release date: 2010-03-18*
+
+
 What's New in Python 2.6.5 rc 2?
 ================================
 
